# Endometriosis

./: .gitignore  README.md  pyproject.toml
lib/: LGBM.py  LGBM_metrics.py  autoencoder.py  balanse_data.py  cleaning.py  consts.py  data_loader.py  data_series.py  detect_outliers.py  direct_graphs.py  feature_selection.py  knn.py  nn_random_search.py  p1_archives.py  p1_classification_utils.py  premodeling_rules.py  prepare_data_for_modelling.py  prepare_data_series.py  process_p1.py  process_p1_male.py  process_q_survey.py  read_data.py  shap_utils.py  str_matching.py  tSNE.py  utils.py  vectorize.py  wstepna_diagnoza.py
notebooks/: Evaluating the risk of endometriosis based on patients’ self-assessment questioners.ipynb
sql/: aktywnosc_id_wizyta.sql  ankieta_id_distinct.sql  ankieta_kwalifikacyjna.sql  badanie_fizykalne.sql  badanie_fizykalne_full.sql  badanie_fizykalne_makra.sql  czynnik_jajowodowy.sql  endocrynology_qsurvey.sql  endometrioza_laparoskopia.sql  glukoza.sql  histopatologia_doc.sql  homa.sql  hst_p1_survey_trial.sql  hst_visit_p1_interwal_wizyty.sql  hst_visit_p1_orders_damian.sql  icd10_p1.sql  icd9_p1.sql  id_process_status.sql  img_metadata.sql  insulinoopornosc.sql  kariotypy.sql  kategorie_badan_invicta.sql  labbiolmolek.sql  lokalizacje.sql  male_factor.sql  medical_product.sql  nawracajace_poronienia.sql  ocr_patient_id.sql  p1_survey_answer.sql  p1_survey_form.sql  p1_survey_visit_statistics.sql  patient_partner_id.sql  pesel_patient_id_mapping.sql  przyczyny_nieplodnosci.sql  recepty_p1.sql  redukcja_masy_ciala.sql  regex_check.sql  sql_wizyty_other.sql  t_process_details.sql  (+23 more)
